--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,75 +1,4 @@
-- @current_group_user = GroupUser.find_by(group_id: @group.id, user_id: current_user.id)
-.row
-  .col-lg-9.group-tab
-    ul#myTab.nav.nav-tabs.group-nav-tab role="tablist"
-      - if current_user.present? && @group.group_admin?(current_user)
-        li.nav-item
-          a#info-one-tab.tab-text.nav-link.active aria-controls="info-one" aria-selected="true" data-toggle="tab" href="#info-one" role="tab"
-            = t('groups.infos')
-        li.nav-item
-          a#members-one-tab.tab-text.nav-link aria-controls="members-one" aria-selected="false" data-toggle="tab" href="#members-one" role="tab"
-            = t('groups.members')
-      - else
-        li.nav-item
-          a#members-one-tab.tab-text.nav-link.active aria-controls="members-one" aria-selected="false" data-toggle="tab" href="#members-one" role="tab"
-            = t('groups.members')
-    #myTabContent.tab-content.groups
-      - if current_user.present? && @group.group_admin?(current_user)
-        #info-one.tab-pane.fade.show.active aria-labelledby="info-tab" role="tabpanel"
-          .group-form.group-tab-content#group-info-content style="width: 100%;"
-            = render partial: 'groups/content_form'
-        #members-one.tab-pane.fade aria-labelledby="members-one-tab" role="tabpanel"
-          .group-form.group-tab-content#group-members-content style="width: 100%;"
-            = render partial: 'groups/members'
-      - else
-        #members-one.tab-pane.show.active aria-labelledby="members-one-tab" role="tabpanel"
-          .group-form.group-tab-content#group-members-content style="width: 100%;"
-            = render partial: 'groups/members'
-  .sidebar.col-lg-3#group-sidebar-content
-    ul#myTab.nav.nav-tabs.group-nav-tab.fade role="tablist" style="height:0px;"
-      - if current_user.present? && @group.group_admin?(current_user)
-        li.nav-item
-          a#info-two-tab.nav-link.active aria-controls="info-two" aria-selected="true" data-toggle="tab" href="#info-two" role="tab"
-        li.nav-item
-          a#members-two-tab.nav-link aria-controls="members-two" aria-selected="false" data-toggle="tab" href="#members-two" role="tab"
-      - else
-        li.nav-item
-          a#members-two-tab.nav-link.active aria-controls="members-two" aria-selected="false" data-toggle="tab" href="#members-two" role="tab"
-    #myTabContent.tab-content
-      - if current_user.present? && @group.group_admin?(current_user)
-        #info-two.tab-pane.fade.show.active aria-labelledby="info-two-tab" role="tabpanel"
-          .card
-            .card-body
-              = link_to(t('groups.group_path'), topics_group_path(@group), class: 'btn btn-primary btn-block')
-        #members-two.tab-pane.fade aria-labelledby="members-two-tab" role="tabpanel"
-          = render "groups/sidebar_group_card_small", group: @group
-      - else
-        #members-two.tab-pane.show.active aria-labelledby="members-two-tab" role="tabpanel"
-          = render "groups/sidebar_group_card_small", group: @group
-
-.modal.edit-group-user-modal.fade#edit-group-user-modal[tabindex='-1' role='dialog']
-  .modal-dialog.modal-dialog-centered[role='document']
-    .modal-content.group-user-modal-content#edit-group-user-modal-body.edit-group-user-modal
-
-javascript:
-  $('#info-one-tab').on('click', function (e) {
-    e.preventDefault()
-    $(this).tab('show')
-    $('#info-two-tab').click()
-  })
-
-  $('#members-one-tab').on('click', function (e) {
-    e.preventDefault()
-    $(this).tab('show')
-    $('#members-two-tab').click()
-  })
-
-  $('#info-two-tab').on('click', function (e) {
-    e.preventDefault()
-    $(this).tab('show')
-  })
-
-  $('#members-two-tab').on('click', function (e) {
-    e.preventDefault()
-    $(this).tab('show')
-  })
+- if @group.show_members? || @group.group_admin?(current_user)
+  = render partial: "show_tabs"
+- else
+  = render partial: "show_page"
