--- a/app/views/groups/_sidebar_for_group_topics.html.slim
+++ b/app/views/groups/_sidebar_for_group_topics.html.slim
@@ -1,6 +1,6 @@
 .card.group-sidebar
   .card-body
-    div class=("group topic media topic-#{group.id} content-header") data-prefetch="#{main_app.group_path(group)}" 
+    .group.topic.media.content-header class="topic-#{group.id}" data-prefetch="#{main_app.group_path(group)}" 
       .avatar
         - if group.avatar_url.present?
           = user_avatar_tag(group, :md)
