[andy] add group manage modal

--- a/app/views/groups/_group_user_card.html.slim
+++ b/app/views/groups/_group_user_card.html.slim
@@ -15,14 +15,14 @@
       .card-button
         - if @current_group_user && (@current_group_user.admin? || @current_group_user.owner?)
           - if group_user.pendding?
-            = link_to(t('groups.approve'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'approve'), method: :put, class: 'btn-opt btn-approve', remote: true)
+            = link_to(t('groups.approve'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'approve'), method: :get, class: 'btn-opt btn-approve', remote: true)
           - if @current_group_user.owner?
             - if group_user.member?
-              = link_to(t('groups.upgrade'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'upgrade'), method: :put, class: 'btn-opt btn-upgrade', remote: true)
+              = link_to(t('groups.upgrade'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'upgrade'), method: :get, class: 'btn-opt btn-upgrade', remote: true)
             - if group_user.admin?
-              = link_to(t('groups.owner_transfer'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'owner'), method: :put, class: 'btn-opt btn-downgrade', remote: true)
-              = link_to(t('groups.downgrade'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'downgrade'), method: :put, class: 'btn-opt btn-downgrade', remote: true)
+              = link_to(t('groups.owner_transfer'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'owner'), method: :get, class: 'btn-opt btn-downgrade', remote: true)
+              = link_to(t('groups.downgrade'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'downgrade'), method: :get, class: 'btn-opt btn-downgrade', remote: true)
           - if group_user.member? && group_user.accepted?
-            = link_to(t('groups.remove'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :put, class: 'btn-opt btn-remove', remote: true)
+            = link_to(t('groups.remove'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :get, class: 'btn-opt btn-remove', remote: true)
           - if group_user.member? && group_user.pendding?
-            = link_to(t('groups.reject'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :put, class: 'btn-opt btn-approve', remote: true)
+            = link_to(t('groups.reject'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'reject'), method: :get, class: 'btn-opt btn-approve', remote: true)
