[andy] fixed iussues and create group user notification

--- a/app/views/group_users/_edit.html.slim
+++ b/app/views/group_users/_edit.html.slim
@@ -33,11 +33,11 @@
       .content
         button.btn.btn-primary.btn-join.modal-close-button[type='button' data-bs-dismiss='modal' aria-label='Close']
           = t('groups.cancel')
-        = link_to(t('groups.confirm'), main_app.group_group_user_path(group_id: group.id, id: group_user.id), class: "btn btn-primary btn-join", method: :delete)
+        = link_to(t('groups.confirm_quite_button'), main_app.group_group_user_path(group_id: group.id, id: group_user.id), class: "btn btn-primary btn-join", method: :delete)
   - elsif group_user.pendding?
     .footer
       .content
-        = link_to(t('groups.cancel_apply'), main_app.group_path(group), class: "btn btn-primary btn-join",)
+        = link_to(t('groups.cancel_apply'), main_app.group_group_user_path(group_id: group.id, id: group_user.id, opt: 'withdraw'), class: "btn btn-primary btn-join", method: :delete)
         button.btn.btn-primary.btn-join.modal-close-button[type='button' data-bs-dismiss='modal' aria-label='Close']
           = t('groups.cancel')
   - elsif group_user.status == nil
