--- a/app/views/group_users/update.js.erb
+++ b/app/views/group_users/update.js.erb
@@ -1,4 +1,5 @@
 (function () {
     target = "<%= escape_javascript(render partial: '/groups/members')%>"
 	replaceHTML($('#group-members-content'), target);
+	$('#edit-group-user-modal').modal('hide');
 })();
