--- a/app/views/groups/_group_user_card.html.slim
+++ b/app/views/groups/_group_user_card.html.slim
@@ -20,9 +20,9 @@
             - if group_user.member?
               = link_to(t('groups.upgrade'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'upgrade'), method: :get, class: 'btn-opt btn-upgrade', remote: true)
             - if group_user.admin?
-              = link_to(t('groups.owner_transfer'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'owner'), method: :get, class: 'btn-opt btn-downgrade', remote: true)
+              = link_to(t('groups.owner_transfer'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'owner_transfer'), method: :get, class: 'btn-opt btn-downgrade', remote: true)
               = link_to(t('groups.downgrade'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'downgrade'), method: :get, class: 'btn-opt btn-downgrade', remote: true)
           - if group_user.member? && group_user.accepted?
             = link_to(t('groups.remove'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :get, class: 'btn-opt btn-remove', remote: true)
           - if group_user.member? && group_user.pendding?
-            = link_to(t('groups.reject'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'reject'), method: :get, class: 'btn-opt btn-approve', remote: true)
+            = link_to(t('groups.reject'), manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'decline'), method: :get, class: 'btn-opt btn-approve', remote: true)
