--- a/app/views/groups/_sidebar_group_card_small.html.slim
+++ b/app/views/groups/_sidebar_group_card_small.html.slim
@@ -23,7 +23,7 @@
       - if current_user.present? && group.group_member?(current_user)
         - group_user = GroupUser.find_by(user_id: current_user.id, group_id: group.id)
         - if group_user.owner?
-          = link_to(t('groups.role_owner'), '', class: "btn btn-primary btn-block btn-joined", remote: true)
+          = link_to(t('groups.joined'), edit_group_group_user_path(id: group_user.id, group_id: group.id), class: "btn btn-primary btn-block btn-joined", remote: true)
         - else
           = link_to(t('groups.joined'), edit_group_group_user_path(id: group_user.id, group_id: group.id), class: "btn btn-primary btn-block btn-joined", remote: true)
       - else
