[andy] update notification service
[andy] add group user notification service

[andy] add group user notification service

[andy] add group user notification service

--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -411,6 +411,18 @@ h2 {
   color: #666666;
 }
 
+.noti-opt-button {
+  font-size: 13px;
+  line-height: 18px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 11px;
+  padding-right: 11px;
+  margin-left: 10px;
+}
+
 .new-topic-group-avatar {
   background: #F4F4F4;
   border-radius: 4px;
