--- a/app/views/notifications/notifications/index.html.erb
+++ b/app/views/notifications/notifications/index.html.erb
@@ -27,3 +27,10 @@
     <%= paginate @notifications  %>
   </div>
 </div>
+
+<div class="modal edit-group-user-modal fade" id="edit-group-user-modal" role="dialog" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content group-user-modal-content edit-group-user-modal" id="edit-group-user-modal-body">
+    </div>
+  </div>
+</div>
