--- a/app/views/group_users/manage.js.erb
+++ b/app/views/group_users/manage.js.erb
@@ -1,5 +1,5 @@
 (function () {
-    target = "<%= escape_javascript(render partial: '/group_users/manage', locals: { group: @group, group_user: @group_user })%>"
+    target = "<%= escape_javascript(render partial: '/group_users/manage', locals: { group: @group, group_user: @group_user, target: params[:target] })%>"
 	replaceHTML($('#edit-group-user-modal-body'), target);
     $('#edit-group-user-modal').modal('show');
 })();
