--- a/app/views/notifications/_operation_button.html.slim
+++ b/app/views/notifications/_operation_button.html.slim
@@ -1,3 +1,3 @@
 - group_user = notification.target
-= link_to(t('groups.approve'), main_app.manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'approve'), method: :get, class: 'btn btn-primary noti-opt-button', remote: true)
-= link_to(t('groups.reject'), main_app.manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'decline'), method: :get, class: 'btn btn-primary btn-joined noti-opt-button', remote: true)
+= link_to(t('groups.approve'), main_app.manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'approve', target: 'notifications'), method: :get, class: 'btn btn-primary noti-opt-button', remote: true)
+= link_to(t('groups.reject'), main_app.manage_group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'decline', target: 'notifications'), method: :get, class: 'btn btn-primary btn-joined noti-opt-button', remote: true)
