[andy] fixed column name

--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -46,7 +46,7 @@
     .row
       .switch-text
         = t('groups.need_approvement_to_join')
-        = f.check_box :auto_approvce, class: 'form-check-input'
+        = f.check_box :auto_approve, class: 'form-check-input'
 .form-group.sub-title
   .form-switch
     .row
