--- a/app/views/groups/_sidebar_for_group_topics.html.slim
+++ b/app/views/groups/_sidebar_for_group_topics.html.slim
@@ -45,3 +45,5 @@
   .card
     .card-body
       = link_to t('topics.new_topic'), main_app.new_topic_path(group_id: group.id), class: 'btn btn-primary btn-block'
+      br
+      = link_to t('topics.new_poll'), main_app.new_topic_path(group_id: group.id, topic_type: 'poll'), class: 'btn btn-primary btn-block'
